[tool.poetry]
name = "rapid-scrawler"
version = "0.1.0"
description = "Web scrawler"
authors = ["Viktor Vilsky <vilsky.v@gmail.com>"]
readme = "README.md"
packages = [{include = "rapid_scrawler"}]

[tool.poetry.dependencies]
python = "^3.11"
lxml = "^4.9.2"
cssselect = "^1.2.0"
requests = "^2.31.0"
arrow = "^1.2.3"
dateparser = "^1.1.8"
pymongo = "^4.3.3"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
flake8 = "^6.0.0"
pytest = "^7.3.1"
mock = "^5.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"